--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "goit-react-hw-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tverdovskyialeksey.github.io/goit-react-hw-07-phonebook/",
+  "homepage": "https://tverdovskyialeksey.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
     "gh-pages": "^3.2.3",
     "modern-normalize": "^1.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
